# Virality-Engine

./: .gitignore  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml  requirements.txt
docs/: architecture.md
frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/layout/: DashboardLayout.tsx  ProtectedRoute.tsx
frontend/src/features/auth/: Login.tsx  Register.tsx
frontend/src/features/simulation/: SimulationStats.tsx
frontend/src/features/world/: CreateWorldModal.tsx  IdeaInjection.tsx  WorldList.tsx  WorldView.tsx
frontend/src/hooks/: useAI.ts  useAuth.ts  useIdea.ts  useWorld.ts
frontend/src/services/: api.ts  authStore.ts
frontend/src/types/: auth.ts  world.ts
infra/docker/: Dockerfile.ai  Dockerfile.auth  Dockerfile.gateway  Dockerfile.simulation
infra/prometheus/: prometheus.yml
services/ai_service/: main.py
services/ai_service/app/: __init__.py
services/ai_service/app/api/: __init__.py  routes.py  schemas.py
services/ai_service/app/llm/: __init__.py  client.py  prompts.py
services/ai_service/app/vector/: __init__.py  store.py
services/api_gateway/: main.py
services/auth_service/: main.py
services/auth_service/app/: __init__.py
services/auth_service/app/api/: routes.py  schemas.py
services/auth_service/app/db/: database.py  models.py
services/simulation_service/: main.py
services/simulation_service/app/: __init__.py
services/simulation_service/app/api/: __init__.py  routes.py  schemas.py
services/simulation_service/app/engine/: __init__.py  agent.py  idea.py  manager.py  world.py
shared/proto/: simulation.proto
shared/schemas/: models.py
shared/utils/: __init__.py  cache.py  config.py  events.py  logging.py  security.py  telemetry.py
tests/: conftest.py  test_simulation.py
